fix alignment,remove outline,fix scroll menu

--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -20,6 +20,7 @@
 
   &__title {
     margin-bottom: 20px;
+    text-align: center;
   }
 
   &__list {
