--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -36,6 +36,8 @@
   &__copyrate {
     margin-top: 60px;
     text-align: center;
+    color: #bdbdbd;
+
   }
 
   &__button-ahead {
