--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -25,18 +25,35 @@
       &:valid {
         border-color: #eb5757;
       }
+
+      &::placeholder {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        text-align: left;
+        color: #bdbdbd;
+      }
     }
 
     &--textarea {
       resize: none;
       height: 128px;
       margin-top: 20px;
+      outline: none;
 
       @include on-tablet {
         height: 201px;
       }
       @include on-desktop {
         height: 128px;
+      }
+
+      &::placeholder {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        text-align: left;
+        color: #bdbdbd;
       }
 
       &:focus {
