--- a/src/styles/blocks/link.scss
+++ b/src/styles/blocks/link.scss
@@ -16,6 +16,7 @@
     color: $c-light-grey;
 
     &:hover {
+      transition: color 0.3s;
       color: $c-text-grey;
     }
   }
@@ -27,6 +28,7 @@
     color: $c-text-grey;
 
     &:hover {
+      transition: color 0.3s;
       font-weight: 700;
       color: $c-menu-grey;
     }
@@ -55,6 +57,7 @@
     }
 
     &:hover {
+      transition: all 0.3s;
       &::after {
         width: 123px;
       }
